<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".operator.PutAway.PutawayActivity"
    android:background="@color/mainBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/back"
                android:textSize="@dimen/font_title"
                android:textAlignment="center"
                android:textColor="@color/colorClickableRipple"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/put"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_title"/>
        </LinearLayout>

        <View
            android:id="@+id/separatorView"
            android:layout_below="@+id/ln2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryText"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:id="@+id/ln3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separatorView"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/font_subheading" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:text=""
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65">

                <EditText
                    android:id="@+id/result1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_subheading"
                    android:textColor="@color/colorSecondaryText"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relatifLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln3"
            android:layout_marginTop="28dp">

            <Button
                android:id="@+id/scan_barcode_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/scanlocation"
                android:textColor="@android:color/white"
                android:padding="20dp"
                style="@style/CommonButton"/>

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scan_barcode_button1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:text="@string/btnFinish"
                android:padding="20dp"
                style="@style/CommonButton"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
